refactor: ledger refactor - lodash treeshake

--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
     "@mya-zaki/advanced-search": "^1.0.0",
     "@release-it/conventional-changelog": "^1.1.4",
-    "@rollup/plugin-typescript": "^5.0.1",
     "@sveltejs/gestures": "0.0.1",
     "@svitejs/vite-plugin-svelte": "^0.11.1",
     "@tailwindcss/typography": "^0.4.1",
@@ -65,78 +64,27 @@
     "@types/papaparse": "^5.2.2",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^26.3.0",
-    "blockstack": "^21.1.1",
     "boolean-parser": "0.0.2",
     "commitizen": "^4.2.4",
     "commitlint": "^9.1.2",
     "concurrently": "^5.2.0",
     "copy": "^0.3.2",
-    "d3-scale": "^3.3.0",
-    "dayjs": "^1.8.30",
-    "dom-to-image-chrome-fix": "^2.6.0",
-    "dom-to-image-more": "^2.8.0",
-    "dynamic-time-warping": "^1.0.0",
     "eslint": "^6.6.0",
     "eslint-plugin-svelte3": "^2.7.3",
-    "esri-leaflet": "^2.3.0",
-    "esri-leaflet-geocoder": "^2.2.14",
-    "euclidean-distance": "^1.0.0",
     "find-in-files": "^0.5.0",
     "git-cz": "^4.6.2",
     "git-release-notes": "^4.0.1",
     "gitlog": "^4.0.4",
-    "html2canvas": "^1.3.3",
     "husky": "^4.2.5",
     "i18next": "^17.0.16",
     "jest": "^26.4.0",
-    "json-loader": "^0.5.7",
-    "latlon-geohash": "^2.0.0",
-    "leaflet": "^1.5.1",
-    "lirm": "0.0.1",
-    "localforage": "^1.7.3",
-    "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "nomie-uom": "^1.0.2",
     "npm-run-all": "^4.1.5",
-    "papaparse": "^5.3.0",
     "postcss-load-config": "^3.1.0",
-    "r-squared": "0.0.0",
     "release-it": "^13.6.6",
-    "rollup": "^2.7.6",
-    "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-copy": "^3.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-livereload": "^1.3.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^4.2.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-sizes": "^1.0.4",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^5.3.1",
-    "rollup-plugin-visualizer": "^2.6.0",
-    "rollup-plugin-workbox": "^5.0.1",
-    "sass-loader": "^7.1.0",
-    "search-text-tokenizer": "^2.1.1",
     "semver": "^6.2.0",
-    "sirv-cli": "^0.4.4",
-    "style-loader": "^0.23.1",
     "svelte": "^3.44.2",
-    "svelte-awesome": "^1.4.1",
-    "svelte-check": "^0.1.55",
-    "svelte-hammer": "^0.1.6",
-    "svelte-hero-icons": "^1.0.5",
     "svelte-jester": "^1.1.2",
-    "svelte-loader": "^2.13.6",
     "svelte-preprocess": "^4.0.8",
-    "svelte-preprocess-css-global": "0.0.1",
-    "svelte-routing": "^1.6.0",
-    "svelte-sortable-list": "^1.1.0",
-    "svelte-spa-router": "^2.1.0",
-    "svelte-spinner": "^2.0.1",
-    "svg-inline-loader": "^0.8.2",
     "tailwindcss": "^2.2.19",
     "tailwindcss-dark-mode": "^1.1.7",
     "ts-jest": "^26.1.4",
@@ -147,10 +95,7 @@
     "vite-plugin-package-version": "^1.0.2",
     "vite-plugin-pwa": "^0.11.6",
     "vite-plugin-svelte-svg": "^1.0.0",
-    "vite-svelte-jsx": "^1.1.0",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^3.3.11",
-    "yargs-parser": "^18.1.3"
+    "vite-svelte-jsx": "^1.1.0"
   },
   "supporting": {
     "cypress": "^4.11.0"
@@ -159,17 +104,30 @@
     "@composi/gestures": "^1.0.9",
     "@egjs/hammerjs": "^2.0.17",
     "@tailwindcss/line-clamp": "^0.2.2",
-    "bootstrap": "^4.3.1",
     "canvas-confetti": "^1.4.0",
-    "carbon-icons-svelte": "^10.9.3",
     "chart.js": "^2.9.4",
     "ionicons": "^6.0.0",
     "nomie-utils": "^0.1.10",
     "postcss": "^8.2.15",
     "pouchdb": "^7.2.2",
-    "rollup-plugin-postcss": "^4.0.1",
     "snarkdown": "^2.0.0",
-    "sortablejs": "^1.10.2"
+    "sortablejs": "^1.10.2",
+    "d3-scale": "^3.3.0",
+    "dayjs": "^1.8.30",
+    "dom-to-image-more": "^2.8.0",
+    "esri-leaflet": "^2.3.0",
+    "esri-leaflet-geocoder": "^2.2.14",
+    "html2canvas": "^1.3.3",
+    "localforage": "^1.7.3",
+    "latlon-geohash": "^2.0.0",
+    "leaflet": "^1.5.1",
+    "lodash": "^4.17.21",
+    "nomie-uom": "^1.0.2",
+    "papaparse": "^5.3.0",
+    "r-squared": "0.0.0",
+    "svelte-hero-icons": "^1.0.5",
+    "svelte-hammer": "^0.1.6",
+    "svelte-routing": "^1.6.0"
   },
   "license": "MIT"
 }
