--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "vite-plugin-package-version": "^1.0.2",
     "vite-plugin-pwa": "^0.11.6",
     "vite-plugin-svelte-svg": "^1.0.0",
-    "vite-svelte-jsx": "^1.1.0"
+    "vite-svelte-jsx": "^1.1.0",
+    "workbox-window": "^6.4.1"
   },
   "supporting": {
     "cypress": "^4.11.0"
