--- a/package.json
+++ b/package.json
@@ -107,27 +107,28 @@
     "@tailwindcss/line-clamp": "^0.2.2",
     "canvas-confetti": "^1.4.0",
     "chart.js": "^2.9.4",
-    "ionicons": "^6.0.0",
-    "nomie-utils": "^0.1.10",
-    "postcss": "^8.2.15",
-    "pouchdb": "^7.2.2",
-    "snarkdown": "^2.0.0",
-    "sortablejs": "^1.10.2",
     "d3-scale": "^3.3.0",
     "dayjs": "^1.8.30",
     "dom-to-image-more": "^2.8.0",
     "esri-leaflet": "^2.3.0",
     "esri-leaflet-geocoder": "^2.2.14",
+    "events": "^3.3.0",
     "html2canvas": "^1.3.3",
-    "localforage": "^1.7.3",
+    "ionicons": "^6.0.0",
     "latlon-geohash": "^2.0.0",
     "leaflet": "^1.5.1",
+    "localforage": "^1.7.3",
     "lodash": "^4.17.21",
     "nomie-uom": "^1.0.2",
+    "nomie-utils": "^0.1.10",
     "papaparse": "^5.3.0",
+    "postcss": "^8.2.15",
+    "pouchdb": "^7.2.2",
     "r-squared": "0.0.0",
-    "svelte-hero-icons": "^1.0.5",
+    "snarkdown": "^2.0.0",
+    "sortablejs": "^1.10.2",
     "svelte-hammer": "^0.1.6",
+    "svelte-hero-icons": "^1.0.5",
     "svelte-routing": "^1.6.0"
   },
   "license": "MIT"
