feat: nomie cloud accounts - subscriptions, encryption, firebase

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ public/vendors/*
 ### Linux ###
 *~
 
+.env*
+
 /vendors/*
 
 # temporary files which can be created if a process still has a handle open of a deleted file
