--- a/package.json
+++ b/package.json
@@ -104,7 +104,9 @@
   "dependencies": {
     "@composi/gestures": "^1.0.9",
     "@egjs/hammerjs": "^2.0.17",
+    "@stripe/firestore-stripe-payments": "0.0.4",
     "@tailwindcss/line-clamp": "^0.2.2",
+    "@virgilsecurity/e3kit-browser": "^2.4.5",
     "canvas-confetti": "^1.4.0",
     "chart.js": "^2.9.4",
     "d3-scale": "^3.3.0",
@@ -113,6 +115,7 @@
     "esri-leaflet": "^2.3.0",
     "esri-leaflet-geocoder": "^2.2.14",
     "events": "^3.3.0",
+    "firebase": "^9.5.0",
     "html2canvas": "^1.3.3",
     "ionicons": "^6.0.0",
     "latlon-geohash": "^2.0.0",
